--- a/themes/topspin/assets/css/_home.css
+++ b/themes/topspin/assets/css/_home.css
@@ -1,7 +1,7 @@
 
-.pro-grd-sec-innr{
+.pro-grd-sec-innr{ 
 	padding: 30px 0 50px; 
-}
+} 
 .pro-grd-sec-innr ul{
 	margin-left: -6px;
 	margin-right: -6px;
@@ -24,6 +24,7 @@
 }
 .pro-grd-img{
 	overflow: hidden;
+	background: #fff;
 }
 .pro-grd-main img{
 	width: 100%;
@@ -35,10 +36,11 @@
 	transform: scale(1.05)
 }
 .pro-grd-des{
-	padding: 5px 4px 12px 7px;
+	padding: 5px 4px 8px 7px;
 }
 .pro-grd-des h2{
 	text-transform: uppercase;
+	bottom: 2px;
 }
 .glassworker-sec-wrp{
 	padding: 55px 0 40px;
@@ -64,11 +66,10 @@
 	padding: 30px 630px 35px 10px;
 	position: relative;
 }
-.glassworker-des-head h1{
-	margin-bottom: 20px;
-}
-.glassworker-des-head h3{
-	margin-bottom: 18px;
+.glassworker-des h1,
+.glassworker-des h2{
+	margin-bottom: 12px;
+	text-transform:uppercase;
 }
 .glassworker-des-main{
 	padding-right: 145px;
@@ -79,7 +80,6 @@
 .glassworker-des-main li{
 	position: relative;
 	padding-left: 15px;
-	text-decoration: underline;
 	margin-bottom: 3px;
 }
 .glassworker-des-main li:after{
@@ -88,18 +88,35 @@
 	left: 0;
 	top: 0;
 }
-.pagebuilder-sec-1{
-	padding: 30px 0 50px;
-	color: #000;
-}
-.pagebuilder-sec-2{
-	padding: 30px 0 20px;
-	color: #000;
+.glassworker-des-main li a{
+	color: #fff;
+	text-decoration: underline;
 }
 
+.glassworker-des-main li a:hover{
+	color: #d5d4d4;
+}
+.hh-pagebuilder-sec{
+	color: #000;
+}
+.hh-pagebuilder-sec h1{
+    margin-bottom: 12px; 
+    text-transform: uppercase;
+}
+.hh-pagebuilder-sec h2{
+    margin-bottom: 12px;
+    text-transform: uppercase;
+}
+
+.pagebuilder-sec-1 {
+    padding: 40px 0 70px;
+}
+.pagebuilder-sec-2{
+	padding: 30px 0 40px;
+	background-color:#d9d9d9;
+}
 .pagebuilder-sec-3{
 	padding: 80px 0 50px;
-	color: #000;
 }
 
 
