--- a/themes/topspin/assets/css/_category-page.css
+++ b/themes/topspin/assets/css/_category-page.css
@@ -155,14 +155,7 @@
 }
 
 @media(max-width: 1299px){
-/* 	.pro-des-head-blc .des-head-blc-mid strong, 
-	.pro-cat-block-head .des-head-blc-mid strong {
-	    font-size: 26px;
-	}
-	.pro-des-head-blc .des-head-blc-mid span, 
-	.pro-cat-block-head .des-head-blc-mid span {
-	    padding-right: 4px;
-	} */
+
 }
 
 @media(max-width: 1199px){
@@ -209,7 +202,9 @@
 	.des-head-blc-lft i img{
 		width: 90px;
 	}
-	
+	.pro-des-head-blc .des-head-blc-rgt{
+	    padding: 15px 14px 18px;
+	}
 }
 
 @media(max-width: 767px){
@@ -236,6 +231,12 @@
 	}
 	.pro-cat-block-des {
 	    display: none;
+	}
+	.pro-cat-block-head .des-head-blc-rgt {
+	    padding: 15px 5px 10px 15px;
+	}
+	.product-cat-sec {
+	    padding: 30px 0 0;
 	}
 }
 
