--- a/themes/topspin/assets/css/_category-page.css
+++ b/themes/topspin/assets/css/_category-page.css
@@ -30,6 +30,7 @@
 	position: absolute;
 	top: 8px;
 	left: 0;
+	max-width: 60px;
 }
 .pro-des-head-blc .des-head-blc-lft i{
     left: 12px;
@@ -160,10 +161,10 @@
 
 @media(max-width: 1199px){
 	.pro-cat-block-head .des-head-blc-lft {
-	    width: 44%;
+	    width: 43%;
 	}
 	.pro-cat-block-head .des-head-blc-mid{
-	    width: 23%;
+	    width: 24%;
 	}
 	.pro-cat-block-head .des-head-blc-rgt{
 	    width: 33%;
@@ -205,6 +206,10 @@
 	.pro-des-head-blc .des-head-blc-rgt{
 	    padding: 15px 14px 18px;
 	}
+	.pro-des-head-blc .des-head-blc-lft i, 
+	.pro-cat-block-head .des-head-blc-lft i {
+	    max-width: 90px;
+	}
 }
 
 @media(max-width: 767px){
@@ -237,6 +242,10 @@
 	}
 	.product-cat-sec {
 	    padding: 30px 0 0;
+	}
+	.pro-des-head-blc .des-head-blc-lft i, 
+	.pro-cat-block-head .des-head-blc-lft i {
+	    max-width: 60px;
 	}
 }
 
