--- a/themes/topspin/assets/css/_header.css
+++ b/themes/topspin/assets/css/_header.css
@@ -206,7 +206,7 @@ span.notification-cls {
     font-size: 21.31px;
     padding: 7px 5px 8px;
 }
-.srlOff{
+.bdySrlOff{
     overflow: hidden;
 }
 
